force-app/main/default/objects/Drip_Campaign_Message__c/fields/Days_Offset__c.field-meta.xml
<CustomField>
    <fullName>Days_Offset__c</fullName>
    <description>Indicates how many days off of when the Drip Campaign is applied to the Lead/Contact for scheduling, i.e. the code uses TODAY() = Days_Offset to set the day that the SMS will go out plus the Time_Of_Day field.</description>
    <inlineHelpText>Indicates how many days from the date the Drip Campaign is applied that the message will be sent.</inlineHelpText>
    <label>Days Offset</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>