force-app/main/default/objects/Drip_Campaign_Message__c/fields/Drip_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Drip_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the parent Drip Campaign where the messages are defined for the campaign.</description>
    <label>Drip Campaign</label>
    <referenceTo>Drip_Campaign__c</referenceTo>
    <relationshipLabel>Drip Campaign Messages</relationshipLabel>
    <relationshipName>Drip_Campaign_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>