force-app/main/default/objects/Drip_Campaign_Message__c/fields/Schedule_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Date_Time__c</fullName>
    <description>Displays the date as if it was added to the contact/lead today. This field is used in the FLOW to set the actual scheduled date. Easier to manage the formula here than in the flow</description>
    <formula>IF(NOT(ISBLANK(Time_of_Day__c)),

/*THEN strip out the last 8 characters of the Time field as SF time fields still have a date component*/
/* Time fields are stored in SF like: 10:00:00.000Z - so take left 8) */

DATETIMEVALUE(
TEXT(TODAY() + Days_Offset__c) &amp; &quot; &quot; &amp; LEFT(TEXT( Time_of_Day__c),8)
) + 4/24 /* Add 7 hrs during DST to correct GMT time conversion, 7 hrs MST or 8 hrs MDT */
,

/*ELSE use the time of NOW()*/
NOW() + Days_Offset__c + IF(NOT(ISBLANK( Minutes_Offset__c )), (Minutes_Offset__c/60/24) , 0)
)

/********************************************
Need to add 7 hrs to the time because date/time fields convert to GMT -
This needs to be more robust and generic where there is a Time
Zone Pick list on the Campaign
*********************************************/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the date as if it was added to the contact/lead today.</inlineHelpText>
    <label>Schedule Date Time</label>
    <type>DateTime</type>
</CustomField>