force-app/main/default/objects/Drip_Campaign_Message__c/fields/SMS_Template__c.field-meta.xml
<CustomField>
    <fullName>SMS_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer chooses either at an SMS Template or a Survey to send.
SMS Template is filtered by the Object chosen for the Drip Campaign Template</description>
    <label>SMS Template</label>
    <referenceTo>tdc_tsw__Message_Template__c</referenceTo>
    <relationshipLabel>Drip Campaign Messages</relationshipLabel>
    <relationshipName>Drip_Campaign_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>