force-app/main/default/objects/Drip_Campaign_Message__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Allow the user to define an SMS Template or Survey. If Survey is set it filters the list of Questions which is needed because of the Question object using an auto-number for the name field.

The choosing of a survey calls a flow because we really need the first Question of the survey for the eventual Scheduled SMS.</description>
    <inlineHelpText>Allow the user to define an SMS Template or Survey. If Survey is set it filters the list of Questions which is needed because of the Question object using an auto-number for the name field.</inlineHelpText>
    <label>Survey</label>
    <referenceTo>tdc_tsw__Survey__c</referenceTo>
    <relationshipLabel>Drip Campaign Messages</relationshipLabel>
    <relationshipName>Drip_Campaign_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>