force-app/main/default/objects/Drip_Campaign_Message__c/fields/Time_of_Day__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Day__c</fullName>
    <description>Set the specific time of day when the message will be sent. If left null it will be the time of NOW() when the item is applied</description>
    <inlineHelpText>Set the specific time of day when the message will be sent. If left null it will be the time of NOW() when the item is applied</inlineHelpText>
    <label>Time</label>
    <type>Time</type>
</CustomField>